--- a/SeaBattleASP/Views/Game/Index.cshtml
+++ b/SeaBattleASP/Views/Game/Index.cshtml
@@ -1,14 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<SeaBattleASP.Models.Player>
+
+@{
+    ViewData["Title"] = "Game Page";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-</body>
-</html>
+<table class="table">
+    @foreach (Player p in Model)
+    {
+        <tr><td>@p.Id</td><td>@p.Name</td><td><button >Play</button></td></tr>
+    }
+</table>
