--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -1,15 +1,19 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    ViewData["Title"] = "Game Page";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>StartGame</title>
-</head>
-<body>
-</body>
-</html>
+<script src="~/js/site.js"></script>
+<section>
+    <div id="leftFieldText">
+        <p>Игрок1</p>
+        <div id="leftText"></div>
+        <div id="leftField">
+        </div><div id="leftTextLeft"></div>
+    </div>
+    <div id="rightFieldText">
+        <p>Игрок2</p>
+        <div id="rightText"></div>
+        <div id="rightField">
+        </div><div id="rightTextLeft"></div>
+    </div>
+</section>
