--- a/SeaBattleASP/wwwroot/css/site.css
+++ b/SeaBattleASP/wwwroot/css/site.css
@@ -35,3 +35,61 @@ body {
         display: none;
     }
 }
+
+/*Игровое поле*/
+section div {
+    display: inline-block;
+    width: 300px;
+    height: 300px;
+    margin-right: 30px;
+}
+
+/*надписи клеток для позиционирования слева и сверху*/
+#leftTextLeft,
+#rightTextLeft,
+#leftText,
+#rightText {
+    display: inline-block;
+    position: relative;
+    display: block;
+    color: #000;
+}
+
+#leftTextLeft,
+#rightTextLeft {
+    width: 30px;
+    height: 300px;
+    left: -30px;
+    top: -305px;
+}
+
+#leftText, #rightText {
+    width: 300px;
+    height: 30px;
+    top: 0px;
+}
+    /*цифра и буква появляется средствами js отдельно*/
+    #leftText span, #rightText span, #leftTextLeft span, #rightTextLeft span {
+        width: 30px;
+        height: 30px;
+        display: block;
+        color: #000;
+        position: relative;
+        float: left;
+    }
+/*параметры ячейки*/
+.cell {
+    border: 1px solid #000;
+    border-top: 0px;
+    border-left: 0px;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    float: left;
+    background: #0094ff;
+    cursor: crosshair;
+}
+
+    .cell:hover {
+        opacity: 0.5;
+    }
