--- a/SeaBattleASP/Views/Shared/_Layout.cshtml
+++ b/SeaBattleASP/Views/Shared/_Layout.cshtml
@@ -17,6 +17,10 @@
     </environment>
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-1.10.0.min.js"
+            integrity="sha256-2+LznWeWgL7AJ1ciaIG5rFP7GKemzzl+K75tRyTByOE="
+            crossorigin="anonymous"></script>
+    <script src="~/js/site.js"></script>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -33,6 +37,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Setting">Setting</a></li>
                 </ul>
             </div>
         </div>
