--- a/SeaBattleASP/Views/Home/Index.cshtml
+++ b/SeaBattleASP/Views/Home/Index.cshtml
@@ -1,16 +1,18 @@
-﻿@{
+﻿@model  SeaBattleASP.Models.Player
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <h2>Register</h2>
+
 <form method="post" asp-controller="Home" asp-action="Index">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label>Name</label><br />
         <input type="text" name="userName" />
-       
+
     </div>
-    
+
     <div>
         <input type="submit" value="Register" />
     </div>
