add mechanizm of painitg ship

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -7,6 +7,7 @@
 <script type="text/javascript">
     var width = '@ViewData["Width"]';
     var height = '@ViewData["Height"]';
+    var points = [{ x: 3, y: 1 }, {x: 3, y:2}]
 </script>
 
 <section>
@@ -28,6 +29,7 @@
     </div>
 </section>
 
+<button id="reload">PAINT</button>
 <button type="button" name="btnAddShips" id="btnAddShips">Add Ships</button>
 <button value="StartGame">Start game</button>
 
