Add Game property to GameController  and rewrite StartGame() method in GameController

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -29,7 +29,7 @@
 </section>
 
 <button type="button" name="btnAddShips" id="btnAddShips">Add Ships</button>
-<button value="StartGame">Start game</button>
+<button onclick="return startGame()">Start game</button>
 
 <div class="modal fade" id="ModalPopUp" role="dialog">
     <div class="modal-dialog err-pop" style="">
