write MakeStep() method in GameController, add function sendMessage in JS

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -30,6 +30,7 @@
 
 <button type="button" name="btnAddShips" id="btnAddShips">Add Ships</button>
 <button onclick="return startGame()">Start game</button>
+<button onclick="return sendMessage()">Make step</button>
 
 <div class="modal fade" id="ModalPopUp" role="dialog">
     <div class="modal-dialog err-pop" style="">
