add to startGame() method change button visibility, delete from  GameController unused variable

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -28,9 +28,9 @@
     </div>
 </section>
 
-<button type="button" name="btnAddShips" id="btnAddShips">Add Ships</button>
-<button onclick="return startGame()">Start game</button>
-<button onclick="return sendMessage()">Make step</button>
+<button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
+<button id="startGame" onclick="return startGame()">Start game</button>
+<button id="makeStep" onclick="return sendMessage()">Make step</button>
 
 <div class="modal fade" id="ModalPopUp" role="dialog">
     <div class="modal-dialog err-pop" style="">
