Add to Startup services for WebSocket

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -30,7 +30,7 @@
 
 <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
 <button id="startGame" onclick="return startGame()">Start game</button>
-<button id="makeStep" onclick="return sendMessage()">Make step</button>
+<button id="makeStep" onclick="return sendMessage('Test')">Make step</button>
 
 <div class="modal fade" id="ModalPopUp" role="dialog">
     <div class="modal-dialog err-pop" style="">
