add to MapModel property SelectedShip, and add to js arr for added ships

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -26,6 +26,10 @@
             </div>
         </div><div id="rightTextLeft"></div>
     </div>
+    <div>
+        <h3>Ships:</h3>
+        <div id="ships"></div>
+    </div>
 </section>
 
 <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
