add panel with added ships

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -26,9 +26,8 @@
             </div>
         </div><div id="rightTextLeft"></div>
     </div>
-    <div>
-        <h3>Ships:</h3>
-        <div id="ships"></div>
+    <div id="shipsPanel">
+        <h5>Ships:</h5>
     </div>
 </section>
 
