--- a/SeaBattleASP/wwwroot/css/site.css
+++ b/SeaBattleASP/wwwroot/css/site.css
@@ -94,8 +94,65 @@ section div {
         opacity: 0.5;
     }
 
-#makeStep
+/* Dropdown Button */
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 2px;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
+}
+
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #2980B9;
+    }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    width:auto;
+    height:auto;
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 30px;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 2px 3px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #ddd
+        }
+
+/* Show the dropdown menu */
+.show {
+    display: block;
+    height:auto;
+    width:auto;
+}
+
+.shipsTable
 {
+    margin: 5px;
+width:auto;
+}
+
+#makeStep {
     display: none;
 }
 
