--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -33,7 +33,7 @@
 
 <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
 <button id="startGame" onclick="return startGame()">Start game</button>
-<button id="makeStep" onclick="return sendMessage('Test')">Make step</button>
+<button id="makeStep">Make step</button>
 
 <div class="container">
     <div class="row">&nbsp;</div>
