add to ChatHub parameter - stepType

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -43,6 +43,9 @@
             User..........<input type="text" id="userInput" />
             <br />
             Message...<input type="text" id="messageInput" />
+            <br />
+
+            Step...<input type="text" id="stepTypeInput" />
             <input type="button" id="sendButton" value="Send Message" />
         </div>
     </div>
