rewrite makeMovement()  (add SignalR)

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -34,26 +34,10 @@
 <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
 <button id="startGame" onclick="return startGame()">Start game</button>
 <button id="makeStep">Make step</button>
+<input type="button" id="sendButton" value="Make a step" />
 
 <div class="container">
     <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-6">&nbsp;</div>
-        <div class="col-6">
-            User..........<input type="text" id="userInput" />
-            <br />
-            Message...<input type="text" id="messageInput" />
-            <br />
-
-            Step...<input type="text" id="stepTypeInput" />
-            <input type="button" id="sendButton" value="Send Message" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <hr />
-        </div>
-    </div>
     <div class="row">
         <div class="col-6">&nbsp;</div>
         <div class="col-6">
