rewrite Repair() method.

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -11,7 +11,7 @@
 
 <section>
     <div id="leftFieldText">
-        <p>Игрок1</p>
+        User<input type="text" id="userInput" />
         <div id="leftText"></div>
         <div id="leftField">
             <div id="leftShade">
