refactoring createShipTable() method

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -26,7 +26,8 @@
             </div>
         </div><div id="rightTextLeft"></div>
     </div>
-    <div style="width:auto" id="shipsPanel">
+    <div 
+         style="vertical-align:top; margin-top:10px" id="shipsPanel">
         <h5>Ships:</h5>
     </div>
 </section>
