refacroting SaveDeckCellToDb() method

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -33,7 +33,7 @@
 </section>
 
 <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
-<button id="startGame" onclick="return startGame()">Start game</button>
+<button id="startGame" disabled="disabled" onclick="return startGame()">Start game</button>
 <button id="makeStep">Make step</button>
 <input type="button" id="sendButton" value="Make a step" />
 
