Added check: hide buttons for making step until the game is not started

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -51,7 +51,7 @@
 <script src="~/js/chat.js"></script>
 
 <div class="modal fade" id="ModalPopUp" role="dialog">
-    <div class="modal-dialog err-pop" style="">
+    <div class="modal-dialog err-pop">
         <div class="modal-content">
             <div class="modal-header">
                 <button id="DivClose" type="button" class="close" data-dismiss="modal">&times;</button>
