Added a mechanism for moving ships

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -37,6 +37,13 @@
 <button id="makeStep">Make step</button>
 <input type="button" id="sendButton" value="Make a step" />
 
+<div style="border: dotted 1px; padding:10px;">
+    <button id="left" onclick="return shiftShip('left')">Left</button>
+    <button id="up" onclick="return shiftShip('up')">Up</button>
+    <button id="down" onclick="return shiftShip('down')">Down</button>
+    <button id="right" onclick="return shiftShip('right')">Right</button>
+</div>
+
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
