--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -32,12 +32,15 @@
     </div>
 </section>
 
-<button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
-<button id="startGame" onclick="return startGame()">Start game</button>
-<button id="makeStep">Make step</button>
-<input type="button" id="sendButton" value="Make a step" />
+<div>
+    <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
+    <button id="startGame" onclick="return startGame()">Start game</button>
+    <button id="makeStep">Make step</button>
+    <input type="button" id="sendButton" value="Make a step" />
+</div>
+<br/>
 
-<div style="border: dotted 1px; padding:10px;">
+<div id="directionPanel" style="border: dotted 1px; padding:10px; display:none; margin: 20px; align-content:center;">
     <button id="left" onclick="return shiftShip('left')">Left</button>
     <button id="up" onclick="return shiftShip('up')">Up</button>
     <button id="down" onclick="return shiftShip('down')">Down</button>
