1. Wrote game over mechanism. 2. Refactoring DbManager file

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -36,7 +36,8 @@
     <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
     <button id="startGame" onclick="return startGame()">Start game</button>
     <button id="makeStep">Make step</button>
-    <input type="button" id="sendButton" value="Make a step" />
+    <button id="sendButton">Make a step</button>
+    <button id="gameOver" onclick="return gameOver()">Game over</button> 
 </div>
 <br/>
 
