--- a/SeaBattleASP/Views/Home/Setting.cshtml
+++ b/SeaBattleASP/Views/Home/Setting.cshtml
@@ -7,11 +7,11 @@
 <table class="table">
     <tr>
         <td>Width:</td>
-        <td>@Model.width</td>
+        <td>@Model.Width</td>
     </tr>
     <tr>
         <td>Height:</td>
-        <td>@Model.height</td>
+        <td>@Model.Height</td>
     </tr>
     <tr>
         <td>Type</td>
