Combined buttons for making a move and alerting players

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -36,7 +36,7 @@
     <button id="btnAddShips" type="button" name="btnAddShips">Add Ships</button>
     <button id="startGame" onclick="return startGame()">Start game</button>
     <button id="makeStep">Make step</button>
-    <button id="sendButton">Make a step</button>
+    <button id="sendButton" style="display:none;">SendMessage</button>
     <button id="gameOver" onclick="return gameOver()">Game over</button> 
 </div>
 <br/>
