Rewrite startGame() method

--- a/SeaBattleASP/Views/Game/StartGame.cshtml
+++ b/SeaBattleASP/Views/Game/StartGame.cshtml
@@ -5,8 +5,8 @@
 }
 
 <script type="text/javascript">
-    var width = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Width));
-    var height = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Height));
+    width = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Width));
+    height = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Height));
 </script>
 
 <section>
