--- a/SeaBattleASP/Views/Home/Index.cshtml
+++ b/SeaBattleASP/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label>Name</label><br />
-        <input id="userName" type="text" onkeyup="validatePlayerName()" name="userName" />
+        <input id="userName" type="text" name="userName" />
 
     </div>
 
